--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,5 +9,5 @@ $thu: 4;
 $fri: 5;
 $sat: 6;
 $sun: 7;
-$calc-column-size: calc(7 * #{$square-size} + 14 * #{$border-size} + 6 * #{$gap});
-$start-week-from: $mon;
+$calc-column-size: calc(7 * #{$square-size} + 6 * #{$gap});
+$start-day: $sun;
