--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,10 @@
 $box-size: 100px;
 $margin-top: 80px;
 $gap: 1px;
-$calendar-size: calc(($box-size + $gap) * 7);
+$calendar-size: calc(($box-size * 7) + ($gap * 6));
 $week-days: ('mon':0, 'tue':1, 'wed':2, 'thu':3, 'fri':4, 'sat':5, 'sun':6);
 $font-size30: 30px;
+$pink: #ffbfcb;
 
 * {
   margin: 0;
@@ -21,7 +22,21 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
-  width: $calendar-size - $gap;
+  width: $calendar-size;
+  &--start-day {
+    @each $day, $index in $week-days {
+      &-#{$day} > :first-child {
+        margin-left: $index * ($box-size + $gap);
+      }
+    }
+  }
+  &--month-length {
+    @for $i from 28 through 31 {
+      &-#{$i} > :nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+  }
   &__day {
     display: flex;
     justify-content: center;
@@ -33,7 +48,7 @@ body {
     transition-duration: 0.2s;
     &:hover {
       cursor: pointer;
-      background-color: #ffbfcb;
+      background-color: $pink;
       transform: translate(0, -20px);
       transition-duration: 0.5s;
     }
@@ -46,22 +61,6 @@ body {
           font-size: $font-size30;
         }
       }
-    }
-  }
-}
-
-.calendar--start-day {
-  @each $day, $index in $week-days {
-    &-#{$day} > :first-child {
-      margin-left: $index * ($box-size + $gap);
-    }
-  }
-}
-
-.calendar--month-length {
-  @for $i from 28 through 31 {
-    &-#{$i} > :nth-child(n + #{$i + 1}) {
-      display: none;
     }
   }
 }
