--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -3,8 +3,7 @@
   flex-wrap: wrap;
   position: absolute;
   gap: $gap;
-  max-width: calc(
-    #{$columns} * #{$cell-size} + #{$columns} * #{$gap} + 2 * #{$padding}
+  max-width: calc($columns * $cell-size + $columns * $gap + 2 * $padding
   );
   padding: $padding;
   cursor: pointer;
