--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-@import '../styles/blocks/calendar';
-@import '../styles/variables/variables';
-
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
+@import './settings/reset';
+@import './settings/variables';
+@import './blocks/calendar';
