add task solution second fix

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,10 +29,14 @@
     color: $main-color;
     font-family: Arial, sans-serif;
     font-size: 30px;
+    transition: background-color 0.5s, transform 0.5s;
+
 
     &:hover {
       cursor: pointer;
-      transform: translateY(-1px);
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+
     }
   }
 
