--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,12 @@
-$cell-size: 100px;
-$gap-size: 1px;
-$days: mon 6,
-  tue 1,
-  wed 2,
-  thu 3,
-  fri 4,
-  sat 5,
-  sun 6;
-$month-length: 31;
+@import 'variables';
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
@@ -19,45 +14,52 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap-size;
-  align-items: center;
-  width: calc(7 * $cell-size + 6 * $gap-size);
-  padding: $cell-size / 10;
-  margin: 5 auto;
+  width: $width;
+  padding: $padding;
 
-  @each $day, $num in $days {
-    &--start-day-#{$day} {
-      .cell:first-child {
-        margin-left: calc($num * ($cell-size + $gap-size));
+  &__cell {
+    width: $cell-size;
+    height: $cell-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+
+    @for $num-of-cell from 1 through 31 {
+      &--#{$num-of-cell} {
+        position: relative;
+
+        &:hover {
+          cursor: pointer;
+          background-color: #FFBFCB;
+          transform: translateY(-20px);
+          transition: transform 0.5s;
+        }
+      }
+
+      &--#{$num-of-cell}::before {
+        position: absolute;
+        content: '#{$num-of-cell}';
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 30px;
       }
     }
   }
-}
 
-.cell {
-  position: relative;
-  box-sizing: border-box;
-
-  @for $num-of-cell from 1 through $month-length {
-    &--#{$num-of-cell}{
-      width: $cell-size;
-      height: $cell-size;
-      border: 1px solid black;
-      background-color: #eee;
-
-      &:hover {
-        cursor: pointer;
-        background-color: #FFBFCB;
-        transform: translateY(-20px);
-        transition: transform 0.5s;
+  @each $day, $ratio in $days {
+    &--start-day-#{$day} {
+      .calendar__cell:first-child {
+        margin-left: $ratio * ($cell-size + $gap-size);
       }
     }
+  }
 
-    &--#{$num-of-cell}::before {
-      content: '#{$num-of-cell}';
-      position: absolute;
-      top: 35%;
-      left: 42%;
-      font-size: 30px;
+  @each $day-number in $month-length {
+    &--month-length-#{$day-number} {
+      .calendar__cell:nth-child(n + #{$day-number + 1}) {
+        display: none;
+      }
     }
   }
 }
