--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,15 +16,15 @@ body {
   width: $width;
   padding: $padding;
 
-  &__cell {
+  &__day {
     width: $cell-size;
     height: $cell-size;
     box-sizing: border-box;
     border: 1px solid black;
     background-color: #eee;
 
-    @for $num-of-cell from 1 through 31 {
-      &--#{$num-of-cell} {
+    @for $num-of-day from 1 through 31 {
+      &--#{$num-of-day} {
         position: relative;
 
         &:hover {
@@ -35,9 +35,9 @@ body {
         }
       }
 
-      &--#{$num-of-cell}::before {
+      &--#{$num-of-day}::before {
         position: absolute;
-        content: '#{$num-of-cell}';
+        content: '#{$num-of-day}';
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -48,7 +48,7 @@ body {
 
   @each $day, $ratio in $days {
     &--start-day-#{$day} {
-      .calendar__cell:first-child {
+      .calendar__day:first-child {
         margin-left: $ratio * ($cell-size + $gap-size);
       }
     }
@@ -56,7 +56,7 @@ body {
 
   @each $day-number in $month-length {
     &--month-length-#{$day-number} {
-      .calendar__cell:nth-child(n + #{$day-number + 1}) {
+      .calendar__day:nth-child(n + #{$day-number + 1}) {
         display: none;
       }
     }
