--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+@import "./variables";
+@import "./calendar";
