--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -3,6 +3,6 @@ $box-height: 100px;
 $day-gap: 1px;
 $calendar-padding: 10px;
 $days-in-week: 7;
-$days-in-month: 29;
+$days-in-month: 31;
 $days-of-the-week: "mon" 1, "tue" 2, "wed" 3, "thu" 4, "fri" 5, "sat" 6, "sun" 7;
-$calendar-width: ($box-width * $days-in-week) + ($calendar-padding * 2) + ($days-in-week - 1);
+$calendar-width: $days-in-week * $box-width + $day-gap * ($days-in-week - 1);
