--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
+@use './variables' as *;
+@use './calendar.scss' as *;
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: $font-size;
 }
