--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,29 +19,28 @@ body {
   &__day {
     width: $cell-size;
     height: $cell-size;
+    position: relative;
     box-sizing: border-box;
     border: 1px solid black;
     background-color: #eee;
 
-    @for $num-of-day from 1 through 31 {
-      &--#{$num-of-day} {
-        position: relative;
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+      transition: transform 0.5s;
+    }
 
-      &--#{$num-of-day}::before {
+    @for $num-of-day from 1 through 31 {
+      &:nth-child(#{$num-of-day}) {
+        &::before {
         position: absolute;
         content: '#{$num-of-day}';
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 30px;
-      }
-
-      &:hover {
-        cursor: pointer;
-        background-color: #FFBFCB;
-        transform: translateY(-20px);
-        transition: transform 0.5s;
+        }
       }
     }
   }
