Fixed all problems

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -25,15 +25,15 @@
     }
 
   }
-  
+
   @for $i from 1 through $days-in-month {
     &__day:nth-child(#{$i})::before {
       content: '#{$i}';
     }
   }
 
-  @for $i from 28 through $days-in-month {
-    &--month-lenght-#{$i}
+  @for $i from 28 through 31 {
+    &--month-length-#{$i}
     &__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
