--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -11,9 +11,7 @@
   &__day {
     height: $cell-size;
     width: $cell-size;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
+    border: 1px solid black;
     background-color: #eee;
     transition-duration: 0.5s;
     display: flex;
