--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import 'utils/variables.scss';
+@import 'utils/variables';
 
 body {
   margin: 0;
@@ -11,7 +11,6 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
   width: calc($columns * $day-size + ($columns - 1) * $paddings);
   position: absolute;
   padding: $paddings;
@@ -54,7 +53,6 @@ body {
       background-color: #FFBFCB;
       transform: translateY(-20px);
     }
-    
   }
 }
 
