--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+$square-day-size: 100px;
+$calendar-size: ($square-day-size * 7 ) + 10;
+
 body {
   margin: 0;
+}
+
+.month {
+  padding: 0 10px;
+  width: $calendar-size;
+  display: flex;
+  gap: 1px;
+  flex-wrap: wrap;
+  margin: 50px auto 0;
+}
+
+.day {
+  box-sizing: border-box;
+  height: $square-day-size;
+  width: $square-day-size;
+  background-color: #eee;
+  border: 1px solid #000;
+
+  transition: all 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+}
+
+@for $day from 1 through 31 {
+  .day:nth-child(n + #{$day}) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::before {
+      content: '#{$day}';
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: $square-day-size / 3;
+    }
+  }
+}
+
+$days-of-week: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+
+@each $day-of-week, $number-of-day in $days-of-week {
+  .start-day--#{$day-of-week} {
+    margin-left: ($number-of-day - 1) * ($square-day-size + 1) ;
+  }
+}
+
+@for $days from 28 through 31 {
+  .month--length-#{$days} .day:nth-child(n + #{$days + 1}) {
+    display: none;
+  }
 }
