--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,4 @@ $calendar-padding: 10px;
 $calendar-gap: 1px;
 $calendar-size: 707px;
 $week-days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
+$month-lengths: 28, 29, 30, 31;
