--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,60 @@
+$days: (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
+$cell-size: 100px;
+
+
 body {
+  height: 100vh;
+  box-sizing: border-box;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: ($cell-size + 10) * 7;
+  gap: 1px;
+  padding: 10px;
+
+  &__day {
+    height: $cell-size;
+    width: $cell-size;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(n + #{$i})::before {
+    content: '#{$i}';
+  }
+}
+
+@each $day, $numOfDay in $days {
+  .calendar--start-day-#{$day} :first-child {
+    margin-left: (($numOfDay - 1) * $cell-size + ($numOfDay * 1 - 1));
+  }
+}
+
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+    display: none;
+  }
 }
