--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,78 @@
+$days: mon 0,
+ tue 101px,
+ wed 101px * 2,
+ thu 101px * 3,
+ fri 101px * 4,
+ sat 101px * 5,
+ sun 101px * 6;
+$month-display-none: 26 5,
+ 27 4,
+ 28 3,
+ 29 2,
+ 30 1;
+
+
 body {
   margin: 0;
+  height: 100vh;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.calendar {
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 706px;
+  padding: 10px;
+  display: flex;
+
+  @each $name, $calc in $days {
+    &--#{$name} :nth-child(-n + 1) {
+      margin-left: $calc;
+    }
+  }
+
+  @for $month-lenght from 1 through 31 {
+    &__month-lenght--#{$month-lenght} :nth-child(-n + #{$month-lenght}) {
+      box-sizing: border-box;
+      border: 1px solid black;
+      width: 100px;
+      height: 100px;
+      background-color: #eee;
+    }
+
+     & :nth-child(#{$month-lenght})::before {
+      content: "#{$month-lenght}";
+     }
+
+     @each $selector, $none in $month-display-none {
+      &__month-lenght--#{$selector} :nth-last-child(-1n + #{$none}) {
+        display: none;
+      }
+    }
+  }
+
+
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+    z-index: 0;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+  }
+
+  &__day:hover {
+    transform: translateY(-20px);
+    z-index: 1;
+    background-color: #FFBFCB;
+    cursor: pointer;
+  }
 }
