--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,4 @@
-$day-row-width: 100px;
-$day-row-heigth: 100px;
-$gap-size: 1px;
-$border-size: 1px;
-$start-day: ("mon": 0,
-  "tue": 1,
-  "wed": 2,
-  "thu": 3,
-  "fri": 4,
-  "sat": 5,
-  "sun": 6,
-);
+@import './utils/variables';
 
 body {
   margin: 0;
@@ -30,7 +19,7 @@ body {
     height: $day-row-heigth - 2 * $border-size;
 
     flex-shrink: 0;
-    border:$border-size black solid;
+    border: $border-size black solid;
     background-color: #eee;
 
     visibility: hidden;
@@ -38,7 +27,7 @@ body {
 
     &:hover {
       cursor: pointer;
-      transform: translate(0, -20px) ;
+      transform: translateY(-20px) ;
       background-color: pink;
     }
   }
