Fixed issue with day change

--- a/src/styles/blocks/layout.scss
+++ b/src/styles/blocks/layout.scss
@@ -58,10 +58,7 @@ body {
     }
   }
 
-  @each $day in $weekdays {
-    $index: nth($day, 1);
-    $name: nth($day, 2);
-
+  @each $index, $name in $weekdays {
     &--#{$name} .month__day:first-of-type {
       margin-left: ($index - 1) * $day-width;
     }
