--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,17 +17,16 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: ($cell-size + 10) * 7;
+  width: (($cell-size + 1) * 7) - 1;
   gap: 1px;
   padding: 10px;
 
   &__day {
     height: $cell-size;
     width: $cell-size;
-    box-sizing: border-box;
     border: 1px solid black;
+    box-sizing: border-box;
     background-color: #eee;
-    gap: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
