--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,58 @@
+@import './variables';
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.calendar {
+  padding-inline: 10px;
+  display: flex;
+  flex-flow: wrap;
+  flex-direction: row;
+  justify-self: center;
+  gap: $calendar-day-gap;
+  width: $calendar-width;
+
+  @each $day, $collumn in $start-day {
+    &--start-day--#{$day} :first-child {
+      margin-left: ($cell-size + $calendar-day-gap) * ($collumn - 1);
+    }
+  }
+
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} :nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+      transition-duration: 0.5s;
+    }
+
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+  }
+
 }
