--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,8 @@
 body {
   margin: 0;
   display: flex;
-  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
   align-items: center;
 }
 
@@ -11,19 +12,18 @@ body {
   padding-inline: 10px;
   display: flex;
   flex-flow: wrap;
-  flex-direction: row;
-  justify-self: center;
+
   gap: $calendar-day-gap;
   width: $calendar-width;
 
   @each $day, $collumn in $start-day {
-    &--start-day--#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
       margin-left: ($cell-size + $calendar-day-gap) * ($collumn - 1);
     }
   }
 
   @for $day from 28 through 31 {
-    &--month-length--#{$day} :nth-child(n + #{$day + 1}) {
+    &--month-length-#{$day} :nth-child(n + #{$day + 1}) {
       display: none;
     }
   }
@@ -31,7 +31,7 @@ body {
   &__day {
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: $cell-size;
     height: $cell-size;
