--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@ body {
     border: 1px solid black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    text-indent: 1px;
 
     &:hover {
       cursor: pointer;
