add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,13 +23,13 @@ body {
   padding: 10px;
 
   @each $day, $day-shift in $days {
-    &--start-day--#{$day} :first-child {
+    &--start-day-#{$day} :first-child {
         margin-left: ($day-shift - 1) * ($cell-size + $gap-shift);
     }
   }
 
   @for $total-days from 28 through 31 {
-    &--month-length--#{$total-days} :nth-child( n + #{$total-days + 1}) {
+    &--month-length-#{$total-days} :nth-child( n + #{$total-days + 1}) {
       display: none;
     }
   }
