--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,23 +1,11 @@
-$days: mon 0,
- tue 101px,
- wed 101px * 2,
- thu 101px * 3,
- fri 101px * 4,
- sat 101px * 5,
- sun 101px * 6;
-$month-display-none: 26 5,
- 27 4,
- 28 3,
- 29 2,
- 30 1;
-
+@import 'variables.scss';
 
 body {
   margin: 0;
   height: 100vh;
 }
 
-.center {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,18 +20,18 @@ body {
   display: flex;
 
   @each $name, $calc in $days {
-    &--#{$name} :nth-child(-n + 1) {
+    &__start-day--#{$name} :nth-child(-n + 1) {
       margin-left: $calc;
     }
   }
 
-  @for $month-lenght from 1 through 31 {
-     & :nth-child(#{$month-lenght})::before {
-      content: "#{$month-lenght}";
+  @for $month-length from 1 through 31 {
+     & :nth-child(#{$month-length})::before {
+      content: "#{$month-length}";
      }
 
      @each $selector, $none in $month-display-none {
-      &__month-lenght--#{$selector} :nth-last-child(-1n + #{$none}) {
+      &__month-length--#{$selector} :nth-last-child(-1n + #{$none}) {
         display: none;
       }
     }
@@ -62,12 +50,12 @@ body {
     width: 100px;
     height: 100px;
     background-color: #eee;
-  }
 
-  &__day:hover {
-    transform: translateY(-20px);
-    z-index: 1;
-    background-color: #FFBFCB;
-    cursor: pointer;
+    &:hover {
+      transform: translateY(-20px);
+      z-index: 1;
+      background-color: #FFBFCB;
+      cursor: pointer;
+    }
   }
 }
