--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,36 @@
+$square-size: 100px;
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 30px;
+}
+
+.calendar {
+  margin: 0 auto;
+  width: $square-size * 7 + 19px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  &__num{
+    @for $day from 1 through 31 {
+      &--day--#{$day} {
+        &::before {
+          content: '#{$day}';
+        }
+      }
+    }
+  }
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: $square-size;
+    height: $square-size;
+    background-color: #eee;
+    border: 1px solid black;
+  }
 }
