--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,68 @@
+@import './variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: ($cell-size + 1px) * 7;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  &__cell {
+    position: relative;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid black;
+    padding: 10px;
+
+    @for $count from 1 through 31 {
+      &:nth-child(#{$count}n)::before {
+        content: "#{$count}";
+        width: 80%;
+        height: 80%;
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+      transition-duration: 0.5s;
+      cursor: pointer;
+    }
+  }
+}
+
+@each $day, $index in $week {
+  .calendar--start-day-#{$day} {
+    .calendar__cell:first-child {
+      margin-left: ($cell-size + 1px) * $index;
+    }
+  }
+}
+
+@for $day from 1 through 31 {
+  .calendar--month-length-#{$day - 1} {
+    .calendar__cell:nth-child(n + #{$day}) {
+      display: none;
+    }
+  }
 }
