--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,8 +1,17 @@
 $box-width: 100px;
 $box-height: 100px;
 $day-gap: 1px;
-$calendar-padding: 10px;
 $days-in-week: 7;
-$days-in-month: 31;
-$days-of-the-week: "mon" 1, "tue" 2, "wed" 3, "thu" 4, "fri" 5, "sat" 6, "sun" 7;
-$calendar-width: $days-in-week * $box-width + $day-gap * ($days-in-week - 1);
+$days-in-month: 28, 29, 30, 31;
+$days-of-the-week: (
+  mon,
+  tue,
+  wed,
+  thu,
+  fri,
+  sat,
+  sun
+  );
+$calendar-width: (($box-width + $day-gap) * $days-in-week) - 1;
+$margin-left: 0;
+
