--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,7 +5,12 @@ body {
 
 .page__content {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+  
 }
