--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,8 +1,9 @@
 $days-in-week: 7;
 $days-in-month: 31;
-$day-width: 110px;
+$day-width: 100px;
 $week-width: $day-width * $days-in-week;
 $month-padding: 10px;
+$gap: calc($day-width * 0.01);
 $background-color: #eee;
 $color-black: #000;
 $color-pink: #FFBFCB;
