--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -9,9 +9,9 @@ html {
 
 body {
   margin: 0;
-  height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
