--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,67 @@
+@import './variables';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.calendar {
+  margin: 50px auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $block-gap;
+  padding: 10px;
+  width: 750px;
+
+
+  @each $day, $index in $days {
+    &--start-day-#{$day}>:first-child {
+    margin-left: $index * (100 + $block-gap);
+    }
+  }
+
+  @for $day from 28 through $max-month-length {
+    &--month-length-#{$day} {
+      & :nth-child(n + #{$day + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  &__day {
+    height: 100px;
+    width: 100px;
+    border: 1px solid #000;
+    background-color: #eee;
+    position: relative;
+
+    @for $day-number from 1 through 31 {
+      &:nth-child(#{$day-number})::before {
+        content: '#{$day-number}';
+        color: #000;
+        font-size: 30px;
+        top: 50px;
+        left: 50px;
+        position: absolute;
+      }
+    }
+
+    &:hover {
+      background-color: #FFBFCB;
+      cursor: pointer;
+      transform: translate(0, -20px);
+      transition-duration: 0.5s;
+    }
+  }
+}
+
+
+
+
+
+
+
