--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  width: $calendar-widht;
+  width: $calendar-width;
   padding: 10px;
 
   @for $day-number from 1 through 31 {
