--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $day-size: 100px;
-$calendar-widht: ($day-size * 7) + 26px;
+$calendar-width: ($day-size * 7) + 26px;
 $shift: $day-size + 1px;
 $days: (
   mon 0,
