--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,4 @@
-$box-width: 100px;
-$box-height: 100px;
+$day-size: 100px;
 $day-gap: 1px;
 $days-in-week: 7;
 $days-in-month: 28, 29, 30, 31;
@@ -12,6 +11,6 @@ $days-of-the-week: (
   sat,
   sun
   );
-$calendar-width: (($box-width + $day-gap) * $days-in-week) - 1;
+$calendar-width: (($day-size + $day-gap) * $days-in-week) - 1;
 $margin-left: 0;
 
