--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -11,8 +11,8 @@
     border: 1px solid black;
     justify-content: center;
     align-items: center;
-    width: $box-width;
-    height: $box-height;
+    width: $day-size;
+    height: $day-size;
     transition-duration: 0.5s;
 
     &:hover {
@@ -32,7 +32,9 @@
     &--start-day-#{$day} &__day:first-child {
       margin-left: $margin-left;
     }
-    $margin-left: $margin-left + $box-width + $day-gap;
+
+    $margin-left: $margin-left + $day-size + $day-gap;
+
   }
 
   @each $length in $days-in-month {
