--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,13 +13,13 @@ $font-family: Arial, Helvetica, sans-serif;
   max-width: calc(#{$columns} * #{$cell-size} + (#{$columns} - 1) * #{$gap});
 }
 
-$days-of-week: mon, tue, wed, thu, fri, sat, sun;
+$days-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
-@each $day in $days-of-week {
+@each $day, $index in $days-of-week {
   .calendar--start-#{$day} {
     .calendar__day {
       &:first-child {
-        margin-left: calc((list.index($days-of-week, $day) - 1) * (#{$cell-size} + #{$gap}));
+        margin-left: calc(#{$index} * (#{$cell-size} + #{$gap}));
       }
     }
   }
