--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+@import './variable';
+
 body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 720px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-left: 14px;
+  gap: 1px;
+
+  &__day {
+    box-sizing: border-box;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid $main-color;
+    text-align: center;
+    padding: 32px 0;
+    transition-duration: 5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+  }
+
+    @for $number from 1 through 31 {
+      & :nth-child(#{$number}) {
+        &::before {
+          content: "#{$number}";
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 30px;
+        }
+      }
+    }
+
+    @each $day, $index in $days-of-week {
+      &--start-day-#{$day} {
+        & :first-child {
+          margin-left: ($cell-size + 1px) * ($index);
+        }
+      }
+    }
+
+    @for $length from 28 through $days-in-month {
+      &--month-length-#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
+        display: none;
+      }
+    }
+ }
+
