--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,16 +7,18 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
-  margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
   gap: $block-gap;
-  padding: 10px;
-  width: 750px;
-
+  width: $calendar-width;
 
   @each $day, $index in $days {
     &--start-day-#{$day}>:first-child {
@@ -37,16 +39,17 @@ body {
     width: 100px;
     border: 1px solid #000;
     background-color: #eee;
-    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @for $day-number from 1 through 31 {
       &:nth-child(#{$day-number})::before {
         content: '#{$day-number}';
         color: #000;
         font-size: 30px;
-        top: 50px;
-        left: 50px;
-        position: absolute;
+        text-align: center;
       }
     }
 
