--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,59 @@
+@import 'variables';
+
 body {
   margin: 0;
+  height: 100vh;
+  font-family: $font;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  width: calc((#{$day-size} * 7) + (#{$column-gap} * 6) + 2 * #{$main-padding});
+  display: flex;
+  flex-wrap: wrap;
+  gap: $column-gap;
+  padding: $main-padding;
+  margin-left: 20px;
+
+  @each $day, $index in $calendar-weekdays {
+    &--start-day-#{$day} :first-child{
+        margin-left: $index * ($day-size + $column-gap);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+        display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    background-color: $day-color;
+    width: $day-size;
+    height: $day-size;
+    border: 1px solid black;
+    transition: transform 500ms;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $day-color-hover;
+    transform: translateY(-20px);
+  }
+  }
+
+
+
+  @for $day-number from 1 through 31 {
+    &__day:nth-child(#{$day-number}):before {
+    content: '#{$day-number}';
+    font-size: 30px;
+    }
+  }
+
 }
