--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,17 @@
+html {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  padding-left: 1px;
+
+  font-size: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+@import "blocks/calendar";
