--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -32,21 +32,23 @@ $gap: 1px;
     }
   }
 
-  @for $day from 1 through 31 {
-    &__day--#{$day}::before {
-      display: inline-block;
-      content: "#{$day}";
+  // Day numbers
+  @for $day-number from 1 through 31 {
+    & :nth-child(#{$day-number})::before {
+      content: "#{$day-number}";
     }
   }
 
-  @each $day, $day-index in $days {
-    &--start-day-#{$day} :first-child {
-      margin-left: ($day-box-size * $day-index ) + $day-index;
+  // Month first day margin
+  @each $day-name, $day-number in $days {
+    &--start-day-#{$day-name} :first-child {
+      margin-left: ($day-box-size * $day-number ) + $day-number;
     }
   }
 
-  @for $day from 28 through 31 {
-    &--month-length-#{$day} :nth-child(n + #{$day + 1}) {
+  // Hide month days, if there is less days in month
+  @for $day-number from 28 through 31 {
+    &--month-length-#{$day-number} :nth-child(n + #{$day-number + 1}) {
       display: none;
     }
   }
