--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,58 @@
+@import 'variables';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-width;
+
+  padding: $main-padding;
+  width: $day-width * 7 + $gap-width * 6;
+
+  @each $day, $index in $days {
+    &--start-day-#{$day} :first-child {
+      margin-left: $index * ($day-width + $gap-width);
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length-#{$month-length} :nth-child(n + #{$month-length + 1}){
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $day-width;
+    height: $day-width;
+    box-sizing: border-box;
+
+    background-color: #eee;
+    border: 1px solid #000;
+    transition: all 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+
+    @for $day-number from 1 through 31 {
+      &:nth-child(#{$day-number}):before {
+        content: "#{$day-number}";
+      }
+
+      font-size: 30px;
+      font-family: Arial, sans-serif;
+    }
+  }
 }
