--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@ body {
       align-items: center;
 
       &::before {
+        padding-left: 1px;
         content: '#{$index}';
         font-family: Arial, sans-serif;
         font-size: $font-size;
