--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,8 @@
 $font: Arial, Helvetica, sans-serif;
-$days: ("sun": 606px, "mon": 0, "tue": 101px, "wen": 202px, "thu": 303px , "fri": 404px, "sat": 505px);
+$days: ( "mon": 0, "tue": 1, "wen": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
 $cell-color: #eee;
 $pointer-color: #FFBFCB;
+$width-cell: 100px;
+$height-cell: 100px;
+$calendar-width: 706px;
+$cell-gap: 1px;
