--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,64 @@
+$cell-size: 100px;
+$cell-gap: 1px;
+$calendar-padding: 10px;
+$border-width: 1px;
+$font-size: 30px;
+$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  display: flex;
+  gap: $cell-gap;
+  padding: $calendar-padding;
+  flex-flow: wrap;
+  width: $cell-size * 7 + $cell-gap * 6;
+
+  @each $day, $position in $days {
+    &--start-day-#{$day} :first-child {
+      margin-left: $position * ($cell-size + $cell-gap);
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length-#{$month-length} :nth-child(n + #{$month-length + 1}) {
+      display: none;
+    }
+  }
+
+    &__day {
+      box-sizing: border-box;
+      height: $cell-size;
+      width: $cell-size;
+
+      background-color: #eee;
+      border: $border-width solid #000;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      font-size: $font-size;
+
+      transition: all 0.5s;
+
+      @for $date from 1 through 31 {
+        &:nth-child(#{$date}):before {
+          content: "#{$date}";
+        }
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: #FFBFCB;
+        transform: translateY(-20px);
+      }
+    }
 }
