add tasks sotutions changes part two

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,6 @@
 @import './utils/mixins';
 @import './variables';
 
-
-
 .body {
   margin: 0;
   height: 100vh;
@@ -35,7 +33,7 @@
 
     &::before {
       counter-increment: section;
-      content: "" counter(section) "";
+      content: counter(section);
       font-family: $font;
       font-size: 30px;
       position: absolute;
@@ -60,11 +58,3 @@
     }
   }
 }
-
-
-
-
-
-
-
-
