--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $font: Arial, Helvetica, sans-serif;
-$days: ( "mon": 0, "tue": 1, "wen": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
+$days: ( "mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
 $cell-color: #eee;
 $pointer-color: #FFBFCB;
 $width-cell: 100px;
