--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,16 @@
+@import './utils/variables';
+@import './utils/functions';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  min-height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+@import './blocks/calendar';
