--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
+@import './variable';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
+.calendar {
+  display: flex;
+  padding: 10px;
+  width: 706px;
+  flex-wrap: wrap;
+  gap: 1px;
+
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $cell-size;
+    height: $cell-size;
+    background: #eee;
+    border: 1px solid black;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
+    transition: all 0.5s;
+
+      @for $numberOfDay from 1 through 31 {
+      &:nth-child(#{$numberOfDay}) {
+        &::before {
+          content: '#{$numberOfDay}';
+        }
+      }
+    }
+  }
+
+  &__day:hover {
+    cursor: pointer;
+    background: #FFBFCB;
+    transform: translateY(-20px);
+  }
+
+  @each $day, $dayPosicion in $days-of-weak {
+    &--start-day-#{$day} {
+       .calendar__day:first-child {
+        margin-left: ($cell-size + 1px) * ($dayPosicion);
+      }
+    }
+  }
+
+  @for $monthLength from 28 through $days-in-month {
+      &--month-length-#{$monthLength} {
+        .calendar__day:nth-child(n + #{$monthLength + 1}) {
+          display: none;
+      }
+    }
+  }
+}
+
+
+
+
