--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,10 +3,18 @@ $font-size: 30px;
 $shift: ($square-size - $font-size) / 2;
 $days-of-week: 'mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7;
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: $font-size;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar {
