Remove conflicting class

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,9 @@
-@use './blocks/page-content.scss';
 @use './blocks/calendar.scss';
+
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
