--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,11 @@
+html {
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
 body {
   margin: 0;
 }
