eased logic, added a few mixins

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,8 @@
 html {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  display: flex;
+  @include max-size;
+  @include flex-container;
 }
 
 body {
-  margin: 0;
+  margin: $margin-zero;
 }
