--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,3 +1,5 @@
+$calendar-day-size: 100px;
+
 .calendar {
   width: 706px;
   display: flex;
@@ -8,20 +10,18 @@
   @for $i from 1 through 31 {
     & :nth-child(#{$i})::before {
       content: '#{$i}';
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      width: 100%;
+
+      @include flex-container;
+      @include max-size;
     }
   }
 
   &__day {
     background-color: #eee;
-    margin: 0;
+    margin: $margin-zero;
     box-sizing: border-box;
-    width: 100px;
-    height: 100px;
+    width: $calendar-day-size;
+    height: $calendar-day-size;
     border: 1px solid black;
     font-size: 30px;
     font-family: Arial, sans-serif;
@@ -41,16 +41,15 @@
 
   // stylelint-disable scss/no-global-function-names
   @each $day in $days {
-    $current-index: index($days, $day);
+    $needed-index: index($days, $day) - 1;
     &--start-day-#{$day} :first-child {
-      margin-left: ($current-index - 1) * 100px + ($current-index - 1);
+      margin-left: $needed-index * $calendar-day-size + $needed-index;
     }
   }
 
   @for $i from 28 through 31 {
     &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
-      visibility: hidden;
-      display: none;
+      @include delete-from-page;
     }
   }
 }
