--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,13 +45,13 @@ body {
           background-color: #ffbfcb;
           transform: translateY(-20px);
         }
-      }
-      .calendar__day:nth-child(#{$day}):before {
-        content: '#{$day}';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        &::before {
+          content: '#{$day}';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
     }
   }
