--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,7 @@
 
   @each $day-of-week, $indentation in $start-day {
     &--start-day-#{$day-of-week} :first-child {
-      margin-left: $indentation;
+      margin-left: $indentation * $cell-width + $indentation;
     }
   }
 }
