--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -6,10 +6,10 @@ $paddings: 20;
 $calendar-width: $cell-width * $row-count + $gap-count + $paddings;
 $start-day: (
   'mon' 0,
-  'tue' 101px,
-  'wed' 202px,
-  'thu' 303px,
-  'fri' 404px,
-  'sat' 505px,
-  'sun' 606px
+  'tue' 1,
+  'wed' 2,
+  'thu' 3,
+  'fri' 4,
+  'sat' 5,
+  'sun' 6
 );
