--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,10 +1,8 @@
 .page {
+  margin: 0;
+  padding: 0;
 
-  &__body {
-    padding: 0;
-    margin: 0;
-  }
-
+  /* This container prevent of display: flex in body */
   &__container {
     display: flex;
     align-items: center;
@@ -15,4 +13,3 @@
     padding: 0;
   }
 }
-
