--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -15,17 +15,16 @@
     background-color: #eee;
     border: 1px solid black;
     box-sizing: border-box;
-  }
 
-  & :nth-child(n):hover {
-    cursor: pointer;
-    background-color: pink;
-    transition: transform 0.5s;
-    transform: translate(0, -20px);
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transition: transform 0.5s;
+      transform: translate(0, -20px);
+    }
   }
 
   @for $i from 1 to 32 {
-
     & :nth-child(n + #{$i})::before {
       content: "#{$i}";
       font-family: Arial, Helvetica, sans-serif;
