--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -6,7 +6,7 @@
   padding: 10px;
   flex-wrap: wrap;
 
-  & :nth-child(n) {
+  &__day {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,11 +15,11 @@
     background-color: #eee;
     border: 1px solid black;
     box-sizing: border-box;
+    transition: transform 0.5s;
 
     &:hover {
       cursor: pointer;
       background-color: pink;
-      transition: transform 0.5s;
       transform: translate(0, -20px);
     }
   }
