fixed lint mistakes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,8 +6,8 @@ body {
   margin: 0;
 }
 
-.calendar{
-  width: calc((100*7) + (1*6) + (10*2));
+.calendar {
+  width: calc((100 * 7) + (1 * 6) + (10 * 2));
   border: 1px solid black;
   border-radius: 5px;
   display: flex;
@@ -15,7 +15,7 @@ body {
   gap: 1px;
   margin: auto;
 
-  &__day{
+  &__day {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,11 +29,11 @@ body {
     &::before {
       content: "";
       font-size: 30px;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
     }
   }
 
-  &__day:hover{
+  &__day:hover {
     background-color: #FFBFCB;
     transform: translateY(-20px);
 
