--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,3 @@
-@import './variables.scss';
-@import './calendar-block.scss';
-@import './page.scss'
-
-
-
+@import './variables';
+@import './calendar-block';
+@import './page';
